--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,8 @@
-# Welcome to Brian's page. 
+# **Welcome**
 
 ## You can see everything I must do for P8105's Homework #4 here. 
+
+I am a grad student living in the greatest city in the world. I have big dreams.
 
 I think you should check out [the Verge](https://www.theverge.com/) and [SneakerNews](https://sneakernews.com/) because these are my favorite websites aside from this one. 
 
