--- a/index.Rmd
+++ b/index.Rmd
@@ -1,9 +1,9 @@
 # **Welcome**
 
-## You can see everything I must do for P8105's Homework #4 here. 
+## You can see everything Brian must do for P8105's Homework #4 here. 
 
-I am a grad student living in the greatest city in the world. I have big dreams.
+I'm a grad student living in the greatest city in the world. I have big dreams.
 
-I think you should check out [the Verge](https://www.theverge.com/) and [SneakerNews](https://sneakernews.com/) because these are my favorite websites aside from this one. 
+Before you click elsewhere, think you should check out [the Verge](https://www.theverge.com/) and [SneakerNews](https://sneakernews.com/) because these are my favorite websites aside from this one. 
 
 ![](https://www.mydral.com/wp-content/uploads/2020/04/datascience.gif)
